kubernetes/media/qbittorrent/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
        - name: qbittorrent
          image: ghcr.io/linuxserver/qbittorrent:4.6.5@sha256:12a17ad4a59f335c4975cff5de20dfbe4f5f54f68bc05858c763dea3f254c23b
          imagePullPolicy: Always
          resources: {}
          ports:
            - containerPort: 8080
            - containerPort: 6881
            - containerPort: 6881
              protocol: UDP
          volumeMounts:
            - name: qbittorrent-config
              mountPath: /config
            - name: samba-volume
              mountPath: /downloads
              subPath: downloads
      volumes:
        - name: samba-volume
          persistentVolumeClaim:
            claimName: samba-pvc
        - name: qbittorrent-config
          persistentVolumeClaim:
            claimName: qbittorrent-config
