kubernetes/media/qbittorrent/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-webui-service
annotations:
  metallb.universe.tf/allow-shared-ip: qbittorrent
  metallb.universe.tf/loadBalancerIPs: 192.168.1.111
spec:
  selector:
    app: qbittorrent
  ports:
    - name: qbittorrent-webui
      protocol: TCP
      port: 80
      targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-udp-service
annotations:
  metallb.universe.tf/allow-shared-ip: qbittorrent
  metallb.universe.tf/loadBalancerIPs: 192.168.1.111
spec:
  type: LoadBalancer
  selector:
    app: qbittorrent
  ports:
    - name: qbittorrent-udp
      protocol: UDP
      port: 6881
      targetPort: 6881

---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-tcp-service
annotations:
  metallb.universe.tf/allow-shared-ip: qbittorrent
  metallb.universe.tf/loadBalancerIPs: 192.168.1.111
spec:
  type: LoadBalancer
  selector:
    app: qbittorrent
  ports:
    - name: qbittorrent-tcp
      protocol: TCP
      port: 6881
      targetPort: 6881
